My attempts at making a game using html and java script.
game
Bread1
GAME__# - this has some pseudo code. it will be the game that i turn in.

--- a/Game/index.html
+++ b/Game/index.html
@@ -16,12 +16,19 @@
 </div>
 <div calss="magicball__spotlight"></div>
 <div class="magicball__bg__shadow"></div>
-<div calss="magicball__upper_shadow"></div>
+<div class="magicball__upper_shadow"></div>
 <div class="magicball__lower__shadow"></div>
    </div>
    <p class="app__info">FOR besat AC Shake esxtra hard</p>
    
-   
+   h1{
+
+    font-family:sans-serif;
+    padding-top: 0px;
+    padding-right: 120px;
+    padding-bottom: 0px;
+    padding-left: 43px;
+       }
    
    
    
